Initial setup, the first unit test

--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test npx mocha --config ./tests/.mocharc.yaml ./tests",
     "start": "node src/app.js",
     "lint": "node_modules/.bin/eslint ./",
     "dev": "nodemon src/app.js | pino-pretty",
     "infra": "docker-compose up -d",
     "infra:stop": "docker-compose down",
-    "migrate": "NODE_ENV=local npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
-    "down": "NODE_ENV=local npx knex migrate:down --knexfile ./src/databases/knexfile.js",
-    "seed": "NODE_ENV=local npx knex seed:run --knexfile ./src/databases/knexfile.js"
+    "db:migrate": "NODE_ENV=local npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
+    "db:rollback": "NODE_ENV=local npx knex migrate:rollback --knexfile ./src/databases/knexfile.js",
+    "db:down": "NODE_ENV=local npx knex migrate:down --knexfile ./src/databases/knexfile.js",
+    "db:seed": "NODE_ENV=local npx knex seed:run --knexfile ./src/databases/knexfile.js"
   },
   "author": "haraslub",
   "license": "ISC",
@@ -34,6 +35,7 @@
     "ramda": "^0.28.0"
   },
   "devDependencies": {
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
     "pino": "^7.8.0",
     "pino-pretty": "^7.5.3"
