Setup of Mocha, Chai, Coverage + added first unit and integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-.env
+# Dependencies
 node_modules
-src/test.js
+
+# Garbage
+*.log
+*~
+*#
+.DS_Store
+.nyc_output
+coverage
+
+# IDE stuff
+.netbeans
+nbproject
+.idea
+.node_history
+*.sublime-*
+*.atom-*
+.vscode
+.tern-*
+.languagebabel
+jsconfig.json
+
+# Local configuration
+.env
