--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "04-architecture",
+  "name": "dogbook",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test npx mocha --config ./tests/.mocharc.yaml ./tests",
+    "test": "NODE_ENV=local npx mocha --config ./tests/.mocharc.yaml ./tests",
+    "test:coverage": "NODE_ENV=local npx nyc mocha --config ./tests/.mocharc.yaml ./tests",
     "start": "node src/app.js",
     "lint": "node_modules/.bin/eslint ./",
     "dev": "nodemon src/app.js | pino-pretty",
@@ -35,9 +36,12 @@
     "ramda": "^0.28.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
     "pino": "^7.8.0",
-    "pino-pretty": "^7.5.3"
+    "pino-pretty": "^7.5.3",
+    "supertest-koa-agent": "^0.3.2"
   }
 }
