--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: '3.3'
 services:
+
   database:
     image: sameersbn/postgresql:latest
     container_name: nodejs-nights-db
@@ -8,3 +9,9 @@ services:
       - PG_TRUST_LOCALNET=true
     ports:
       - '5432:5432'
+
+  redis:
+    image: redis
+    container_name: nodejs-nights-redis
+    ports:
+      - "6379:6379"
