Add workers + fix db issue

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "report-test": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "start": "node src/app.js",
     "lint": "node_modules/.bin/eslint ./",
-    "dev": "nodemon --watch src --ext js --exec \"nf start -j Procfile.dev\" | pino-pretty",
-    "infra": "docker-compose up -d",
+    "dev": "nodemon --watch src --ext js --exec \"nf start -j Procfile.dev\"",
+    "infra": "docker-compose up -d --build",
     "infra:stop": "docker-compose down",
     "db:migrate": "NODE_ENV=local npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
     "db:migrate:deploy": "npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
@@ -21,7 +21,9 @@
   "author": "haraslub",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1117.0",
     "bcrypt": "^5.0.1",
+    "bluebird": "^3.7.2",
     "bull": "^4.8.1",
     "codecov": "^3.8.3",
     "crypto": "^1.0.1",
