--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "report-test": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "start": "node src/app.js",
     "lint": "node_modules/.bin/eslint ./",
+    "snyk": "snyk auth $SNYK_TOKEN && snyk test",
     "dev": "nodemon --watch src --ext js --exec \"nf start -j Procfile.dev\"",
     "infra": "docker-compose up -d --build",
     "infra:stop": "docker-compose down",
@@ -36,6 +37,7 @@
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "koa-compress": "^5.1.0",
+    "koa-helmet": "^6.1.0",
     "koa-router": "^10.1.1",
     "node-fetch": "^2.6.7",
     "objection": "^3.0.1",
@@ -51,6 +53,7 @@
     "nyc": "^15.1.0",
     "pino-pretty": "^7.5.3",
     "sinon": "^13.0.1",
+    "snyk": "^1.908.0",
     "supertest-koa-agent": "^0.3.2"
   }
 }
