--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dogbook API",
   "main": "src/app.js",
   "scripts": {
-    "test": "NODE_ENV=local npx mocha --config ./tests/.mocharc.yaml ./tests",
+    "test": "npx mocha --config ./tests/.mocharc.yaml ./tests",
     "test:coverage": "NODE_ENV=local npx nyc mocha --config ./tests/.mocharc.yaml ./tests",
     "report-test": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "start": "node src/app.js",
@@ -13,11 +13,11 @@
     "dev": "nodemon --watch src --ext js --exec \"nf start -j Procfile.dev\"",
     "infra": "docker-compose up -d --build",
     "infra:stop": "docker-compose down",
-    "db:migrate": "NODE_ENV=local npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
+    "db:migrate": "npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
     "db:migrate:deploy": "npx knex migrate:latest --knexfile ./src/databases/knexfile.js",
-    "db:rollback": "NODE_ENV=local npx knex migrate:rollback --knexfile ./src/databases/knexfile.js",
-    "db:down": "NODE_ENV=local npx knex migrate:down --knexfile ./src/databases/knexfile.js",
-    "db:seed": "NODE_ENV=local npx knex seed:run --knexfile ./src/databases/knexfile.js"
+    "db:rollback": "npx knex migrate:rollback --knexfile ./src/databases/knexfile.js",
+    "db:down": "npx knex migrate:down --knexfile ./src/databases/knexfile.js",
+    "db:seed": "npx knex seed:run --knexfile ./src/databases/knexfile.js"
   },
   "author": "haraslub",
   "license": "ISC",
