--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "author": "haraslub",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load-files": "^6.5.3",
+    "@graphql-tools/merge": "^8.2.10",
+    "apollo-server-core": "^3.6.7",
+    "apollo-server-koa": "^3.6.7",
     "aws-sdk": "^2.1117.0",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
@@ -30,6 +34,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
+    "graphql": "^16.4.0",
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.2",
