--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bull": "^4.8.1",
     "codecov": "^3.8.3",
     "crypto": "^1.0.1",
+    "dataloader": "^2.1.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
     "graphql": "^16.4.0",
@@ -51,6 +52,7 @@
     "ramda": "^0.28.0"
   },
   "devDependencies": {
+    "@apollo/rover": "^0.5.4",
     "chai": "^4.3.6",
     "foreman": "^3.0.1",
     "mocha": "^9.2.2",
